# AdaRank

./: .gitignore  Makefile  README.md  benchmark.sh  project.gpr
.github/workflows/: ada.yml
LaTeX/: NewTeX.cls  main.tex  raffinages.tex
Livrables/: NewTeXRaffinage.cls  demo.tex  main.tex
networks/: test.net
src/: export.adb  export.ads  graphe.adb  graphe.ads  matrice.adb  matrice.ads  page_rank.adb  test_matrice.adb  trifusion.adb  trifusion.ads
tests/: test_export.adb  test_graphe.adb  test_matrice.adb  test_trifusion.adb  tests.adb
vizualizer/: main.py  pyproject.toml
